--- a/_docs/site-network/Q3_1.md
+++ b/_docs/site-network/Q3_1.md
@@ -59,27 +59,27 @@ The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|     Site / Sitio: Q3.1                                   |     March / marzo 2023                                           |
-|----------------------------------------------------------|----------------------------------------------------------|
-|     Season / Temporada:                                  |     Austral Summer / Verano                              |
-|     Date / Fecha:                                        |     20.3.23                                              |
-|     Time / Hora:                                         |     8.30                                                 |
-|     Width / Ancho (m)                                    |     10.20                                                |
-|     Depth / Profundidad (Av.) (m)                        |     0.22                                                 |
-|     CSA / Area traversal (Av.) (m²)                      |     2.24                                                 |
-|     Velocity / Velocidad  (Av.) (m/s)                    |     0.78                                                 |
-|     Discharge / Caudal (Av.) (m³/s)                      |     1.741                                                |
-|     Riverbed sediment / Sedimentos                       |     Mainly pebbles / Principalmente piedritas            |
-|     Temperature (Atmospheric) (°C)                       |     21.6                                                 |
-|     Temperature (Water / Agua) (°C)                      |     14.77                                                |
-|     Atmospheric pressure / presión (mbar)                |     809.2                                                |
-|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     6.88                                                 |
-|     Dissolved oxygen / Oxigeno disuelto (%)              |     82.2                                                 |
-|     pH                                                   |     7.98                                                 |
-|     Conductivity / Conductividad (µS/cm)                 |     171                                                  |
-|     Total Dissolved Solids (TDS / STD)  (ppm)            |     86                                                   |
-|     ORP (mV)                                             |     248.8                                                |
-|     Turbidity / Turbidez                                 |     Clear: slightly green Transparente:   poco verde     |
-|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     81 (1.6N)                                            |
-|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     80                                                   |
+|       Site / Sitio: Q3.1                                 |       March / marzo 2023                                 |       June / junio 2023                        |
+|----------------------------------------------------------|----------------------------------------------------------|------------------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano                              |     Austral Winter / Invierno                  |
+|     Date / Fecha:                                        |     20.3.23                                              |     20.6.23                                    |
+|     Time / Hora:                                         |     8.30                                                 |     9.45                                       |
+|     Width / Ancho (m)                                    |     10.20                                                |     8.40                                       |
+|     Depth / Profundidad (Av.) (m)                        |     0.22                                                 |     0.07                                       |
+|     CSA / Area traversal (Av.) (m²)                      |     2.24                                                 |     0.59                                       |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     0.78                                                 |     0.250                                      |
+|     Discharge / Caudal (Av.) (m³/s)                      |     1.741                                                |     0.147                                      |
+|     Riverbed sediment / Sedimentos                       |     Mainly pebbles / Mas piedritas                       |     Pebbles & cobbles / Piedritas y Piedras    |
+|     Temperature (Atmospheric) (°C)                       |     21.6                                                 |     28.0                                       |
+|     Temperature (Water / Agua) (°C)                      |     14.77                                                |     16.01                                      |
+|     Atmospheric pressure / presión (mbar)                |     809.2                                                |     808.3                                      |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     6.88                                                 |     6.73                                       |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     82.2                                                 |     82.6                                       |
+|     pH                                                   |     7.98                                                 |     8.07                                       |
+|     Conductivity / Conductividad (µS/cm)                 |     171                                                  |     795                                        |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     86                                                   |     397                                        |
+|     ORP (mV)                                             |     248.8                                                |     157.2                                      |
+|     Turbidity / Turbidez                                 |     Clear: slightly green Transparente: poco verde       |     Turbid: Green / Turbidez: Verde            |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     81 (1.6N)                                            |     255 (1.6N)                                 |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     80                                                   |     223                                        |
 
