--- a/_docs/site-network/Q3_1.md
+++ b/_docs/site-network/Q3_1.md
@@ -79,7 +79,7 @@ En este lugar se recogieron los siguientes datos fluviales y de calidad del agua
 |     Conductivity / Conductividad (µS/cm)                 |     171                                                  |     795                                        |
 |     Total Dissolved Solids (TDS / STD)  (ppm)            |     86                                                   |     397                                        |
 |     ORP (mV)                                             |     248.8                                                |     157.2                                      |
-|     Turbidity / Turbidez                                 |     Clear: slightly green Transparente: poco verde       |     Turbid: Green / Turbidez: Verde            |
+|     Turbidity / Turbidez                                 |     Clear: slightly green / Transparente: poco verde     |     Turbid: Green / Turbidez: Verde            |
 |     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     81 (1.6N)                                            |     255 (1.6N)                                 |
 |     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     80                                                   |     223                                        |
 
