--- a/_docs/site-network/Q3_2.md
+++ b/_docs/site-network/Q3_2.md
@@ -59,26 +59,26 @@ The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|     Site / Sitio: Q3.2                                   |     March / marzo 2023                                     |
-|----------------------------------------------------------|----------------------------------------------------|
-|     Season / Temporada:                                  |     Austral Summer / Verano                        |
-|     Date / Fecha:                                        |     22.3.23                                        |
-|     Time / Hora:                                         |     9.00                                           |
-|     Width / Ancho (m)                                    |     5.60                                           |
-|     Depth / Profundidad (Av.) (m)                        |     0.73                                           |
-|     CSA / Area traversal (Av.) (m²)                      |     4.09                                           |
-|     Velocity / Velocidad  (Av.) (m/s)                    |     0.68                                           |
-|     Discharge / Caudal (Av.) (m³/s)                      |     2.760                                          |
-|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Principalmente rocas         |
-|     Temperature (Atmospheric) (°C)                       |     17.0                                           |
-|     Temperature (Water / Agua) (°C)                      |     11.97                                          |
-|     Atmospheric pressure / presión (mbar)                |     762.0                                          |
-|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     7.70                                           |
-|     Dissolved oxygen / Oxigeno disuelto (%)              |     96.7                                           |
-|     pH                                                   |     8.07                                           |
-|     Conductivity / Conductividad (µS/cm)                 |     38                                             |
-|     Total Dissolved Solids (TDS / STD)  (ppm)            |     19                                             |
-|     ORP (mV)                                             |     251.3                                          |
-|     Turbidity / Turbidez                                 |     Turbid: slightly grey Turbidez: poco   gris    |
-|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     41 (1.6N)                                      |
-|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     40                                             |
+|       Site / Sitio: Q3.2                                 |       March / marzo 2023                           |       June / junio 2023            |
+|----------------------------------------------------------|----------------------------------------------------|------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano                        |     Austral Winter / Invierno      |
+|     Date / Fecha:                                        |     22.3.23                                        |     22.6.23                        |
+|     Time / Hora:                                         |     9.00                                           |     8.45                           |
+|     Width / Ancho (m)                                    |     5.60                                           |     1.90                           |
+|     Depth / Profundidad (Av.) (m)                        |     0.73                                           |     0.10                           |
+|     CSA / Area traversal (Av.) (m²)                      |     4.09                                           |     0.19                           |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     0.68                                           |     0.17                           |
+|     Discharge / Caudal (Av.) (m³/s)                      |     2.760                                          |     0.032                          |
+|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas rocas                    |     Mainly boulders / Mas rocas    |
+|     Temperature (Atmospheric) (°C)                       |     17.0                                           |     24.0                           |
+|     Temperature (Water / Agua) (°C)                      |     11.97                                          |     11.62                          |
+|     Atmospheric pressure / presión (mbar)                |     762.0                                          |     763.3                          |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     7.70                                           |     10.12                          |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     96.7                                           |     126.3                          |
+|     pH                                                   |     8.07                                           |     8.55                           |
+|     Conductivity / Conductividad (µS/cm)                 |     38                                             |     190                            |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     19                                             |     95                             |
+|     ORP (mV)                                             |     251.3                                          |     176.2                          |
+|     Turbidity / Turbidez                                 |     Turbid: slightly grey / Turbidez: poco gris    |     Clear / Transparente           |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     41 (1.6N)                                      |     120 (1.6N)                     |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     40                                             |     116                            |
