--- a/_docs/site-network/Q3_3.md
+++ b/_docs/site-network/Q3_3.md
@@ -97,26 +97,26 @@ The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|     Site / Sitio: Q3.3                                   |     March / marzo 2023                                   |
-|----------------------------------------------------------|--------------------------------------------------|
-|     Season / Temporada:                                  |     Austral Summer / Verano                      |
-|     Date / Fecha:                                        |     23.3.23                                      |
-|     Time / Hora:                                         |     10.30                                        |
-|     Width / Ancho (m)                                    |     0.78                                         |
-|     Depth / Profundidad (Av.) (m)                        |     0.25                                         |
-|     CSA / Area traversal (Av.) (m²)                      |     0.20                                         |
-|     Velocity / Velocidad  (Av.) (m/s)                    |     0.01                                         |
-|     Discharge / Caudal (Av.) (m³/s)                      |     0.040                                        |
-|     Riverbed sediment / Sedimentos                       |     Mainly pebbles / Principalmente piedritas    |
-|     Temperature (Atmospheric) (°C)                       |     9.9                                          |
-|     Temperature (Water / Agua) (°C)                      |     12.31                                        |
-|     Atmospheric pressure / presión (mbar)                |     674.7                                        |
-|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     6.82                                         |
-|     Dissolved oxygen / Oxigeno disuelto (%)              |     107.5                                        |
-|     pH                                                   |     7.46                                         |
-|     Conductivity / Conductividad (µS/cm)                 |     38                                           |
-|     Total Dissolved Solids (TDS / STD)  (ppm)            |     19                                           |
-|     ORP (mV)                                             |     177.5                                        |
-|     Turbidity / Turbidez                                 |     Clear  /    Transparente                     |
-|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     28 (1.6N)                                    |
-|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     25                                           |
+|       Site / Sitio: Q3.3                                 |       March / marzo 2023              |       June / junio 2023          |
+|----------------------------------------------------------|---------------------------------------|----------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano           |     Austral Winter / Invierno    |
+|     Date / Fecha:                                        |     23.3.23                           |     23.6.23                      |
+|     Time / Hora:                                         |     10.30                             |     10.00                        |
+|     Width / Ancho (m)                                    |     0.78                              |     1.47                         |
+|     Depth / Profundidad (Av.) (m)                        |     0.25                              |     0.10                         |
+|     CSA / Area traversal (Av.) (m²)                      |     0.20                              |     0.15                         |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     0.01                              |     0.077                        |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.040                             |     0.011                        |
+|     Riverbed sediment / Sedimentos                       |     Mainly pebbles / Mas piedritas    |     Mainly rocks / Mas rocas     |
+|     Temperature (Atmospheric) (°C)                       |     9.9                               |     17.4                         |
+|     Temperature (Water / Agua) (°C)                      |     12.31                             |     8.12                         |
+|     Atmospheric pressure / presión (mbar)                |     674.7                             |     734.6                        |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     6.82                              |     7.01                         |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     107.5                             |     87.1                         |
+|     pH                                                   |     7.46                              |     7.44                         |
+|     Conductivity / Conductividad (µS/cm)                 |     38                                |     45                           |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     19                                |     23                           |
+|     ORP (mV)                                             |     177.5                             |     167.8                        |
+|     Turbidity / Turbidez                                 |     Clear / Transparente          |     Clear / Transparente     |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     28 (1.6N)                         |     37 (1.6N)                    |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     25                                |     34                           |
