--- a/_docs/site-network/RC02.md
+++ b/_docs/site-network/RC02.md
@@ -64,28 +64,28 @@ The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|     Site / Sitio: RC02                                   |     March / marzo 2023                        |
-|----------------------------------------------------------|-----------------------------------------------|
-|     Season / Temporada:                                  |     Austral Summer / Verano                   |
-|     Date / Fecha:                                        |     20.3.23                                   |
-|     Time / Hora:                                         |     11.30                                     |
-|     Width / Ancho (m)                                    |     29.50                                     |
-|     Depth / Profundidad (Av.) (m)                        |     0.92                                      |
-|     CSA / Area traversal (Av.) (m²)                      |     27.25                                     |
-|     Velocity / Velocidad  (Av.) (m/s)                    |     1.24                                      |
-|     Discharge / Caudal (Av.) (m³/s)                      |     33.845                                    |
-|     Riverbed sediment / Sedimentos                       |     Boulders & Cobbles / Rocas y Guijarros    |
-|     Temperature (Atmospheric) (°C)                       |     27.2                                      |
-|     Temperature (Water / Agua) (°C)                      |     17.06                                     |
-|     Atmospheric pressure / presión (mbar)                |     804.2                                     |
-|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     7.89                                      |
-|     Dissolved oxygen / Oxigeno disuelto (%)              |     100.4                                     |
-|     pH                                                   |     8.05                                      |
-|     Conductivity / Conductividad (µS/cm)                 |     158                                       |
-|     Total Dissolved Solids (TDS / STD)  (ppm)            |     79                                        |
-|     ORP (mV)                                             |     230.5                                     |
-|     Turbidity / Turbidez                                 |     Turbid: light brown / marron ligero       |
-|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     56 (1.6N)                                 |
-|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     38                                        |
+|       Site / Sitio: RC02                                 |       March / marzo 2023                      |       June / junio 2023                   |
+|----------------------------------------------------------|-----------------------------------------------|-------------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano                   |     Austral Winter / Invierno             |
+|     Date / Fecha:                                        |     20.3.23                                   |     20.6.23                               |
+|     Time / Hora:                                         |     11.30                                     |     12.00                                 |
+|     Width / Ancho (m)                                    |     29.50                                     |     23.10                                 |
+|     Depth / Profundidad (Av.) (m)                        |     0.92                                      |     0.34                                  |
+|     CSA / Area traversal (Av.) (m²)                      |     27.25                                     |     7.85                                  |
+|     Velocity / Velocidad  (Av.) (m/s)                    |     1.24                                      |     0.366                                 |
+|     Discharge / Caudal (Av.) (m³/s)                      |     33.845                                    |     2.906                                 |
+|     Riverbed sediment / Sedimentos                       |     Boulders & Cobbles / Rocas y Piedras      |     Sand & Pebbles / Arena y Piedritas    |
+|     Temperature (Atmospheric) (°C)                       |     27.2                                      |     22.0                                  |
+|     Temperature (Water / Agua) (°C)                      |     17.06                                     |     17.18                                 |
+|     Atmospheric pressure / presión (mbar)                |     804.2                                     |     804.2                                 |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |     7.89                                      |     10.90                                 |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     100.4                                     |     138.4                                 |
+|     pH                                                   |     8.05                                      |     8.67                                  |
+|     Conductivity / Conductividad (µS/cm)                 |     158                                       |     551                                   |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     79                                        |     279                                   |
+|     ORP (mV)                                             |     230.5                                     |     169.3                                 |
+|     Turbidity / Turbidez                                 |     Turbid: light brown / marron ligero       |     Clear / Transparente                  |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     56 (1.6N)                                 |     292 (1.6N)                            |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     38                                        |     142                                   |
 
 
