--- a/_docs/site-network/Q1_1.md
+++ b/_docs/site-network/Q1_1.md
@@ -32,7 +32,7 @@ Q1.1 is located in a small valley with a narrow flood-plain cutting through the 
 
 The right bank site is situated on river deposits so its precise position may vary on a seasonal basis with the shifting of the deposits. A rise and fall in the river level may also impact upon the precise location of the site.
 
-Access is along the left side of the valley through and beyond the small settlement of Iribamba. The road ends at the river Cachi; it is then a 100 metre walk across two fields south along the bank of the river Cachi to the river Opanccay.
+Access is along the left side of the valley through and beyond the small settlement of Iribamba. The road ends at the river Cachi; it is then a 100 metre walk across two fields north along the bank of the river Cachi to the river Opanccay.
 
 (Comments on geology, vegetation and fauna will be added post-future field visits).
 
@@ -44,7 +44,7 @@ El sitio de estudio se encuentra a unos 25 metros por encima de la confluencia d
 
 El emplazamiento de la orilla derecha está situado sobre depósitos fluviales, por lo que su posición exacta puede variar estacionalmente con el desplazamiento de los depósitos. Las subidas y bajadas del nivel del río también pueden influir en la ubicación exacta del emplazamiento.
 
-El acceso se realiza por el lado izquierdo del valle a través y más allá de un pequeño grupo de casa que se llaman Iribamba. La trocha carrozable termina poco antes del río Cachi donde se puede aparcar. Luego, es una caminata de 100 metros a través de dos campos hacia el sur a lo largo de la orilla del río Cachi hasta el río Opanccay.
+El acceso se realiza por el lado izquierdo del valle a través y más allá de un pequeño grupo de casa que se llaman Iribamba. La trocha carrozable termina poco antes del río Cachi donde se puede aparcar. Luego, es una caminata de 100 metros a través de dos campos hacia el norte a lo largo de la orilla del río Cachi hasta el río Opanccay.
 
 (Los comentarios sobre la geología, vegetación y fauna se añadirán después de futuras visitas de campo).
 
