--- a/_docs/site-network/Q1_2.md
+++ b/_docs/site-network/Q1_2.md
@@ -28,15 +28,15 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 ### Site description
 
-Q1.2 is located in a very narrow valley where the river Opanccay has cut steeply back in to the lower slopes of the sierra Razuhuillca. The study site is situated immediately above a footbridge crossing the river on the trail up to the nearby Sirenachayoc waterfall. A large rock forms the left bank while the right bank formed from stones and silt is less clearly defined.
+Q1.2 is located in a very narrow valley where the river Opanccay has cut steeply back in to the lower slopes of the sierra Razuhuillca. The study site is situated immediately above a footbridge crossing the river on the trail up to the nearby Sirenachayoc waterfall. A large rock forms the left bank while the right bank, formed from stones and silt, is less clearly defined.
 
-Access for taking measurements is best from the right bank when the river level is low, however, its  precise position may vary on a seasonal basis with the shifting of the deposits. A rise and fall in the river level may also impact upon the precise location of the site.
+Access for taking measurements is best from the right bank when the river level is low, however, its  precise position may vary on a seasonal basis with the shifting of the deposits, while some measurements are best taken from the bridge. A rise and fall in the river level may also impact upon the precise location of the site. Some measurements are best taken from the bridge.
 
 Access and parking is from the small settlement of Ñahuinpuquio (where a s/1 per person entry fee is charged to visit the waterfall). The site is located about 750 metres up the trail to the waterfall.
 
 (Comments on geology, vegetation and fauna will be added post-future field visits).
 
-NB. In March 2023, the original intention was to visit a site where the river is bridged by either the  new or old Huanta to Luricocha roads but at both locations there was minimal water in the river that day. These locations will be checked again as potential sites on future visits.
+NB. In March and June 2023, the original intention was to visit a site where the river is bridged by either the new or old Huanta to Luricocha roads but at both locations there was minimal water in the river that day. These locations will be checked again as potential sites on future visits.
 
 ### Descripción del sitio
 
@@ -44,13 +44,13 @@ Q1.2 está situado en un valle muy estrecho donde el río Opanccay ha cortado ab
 
 El sitio de estudio está situado inmediatamente por encima de un puente que cruza el río en el sendero que sube a la cercana cascada de Sirenachayoc. Una roca forma la orilla izquierda, mientras que la orilla derecha, formada por piedras y limo, está menos claramente definida.
 
-El mejor acceso para realizar mediciones es desde la orilla derecha cuando el nivel del río es bajo; sin embargo, su posición exacta puede variar estacionalmente con el desplazamiento de los depósitos. Las subidas y bajadas del nivel del río también pueden influir en la ubicación exacta del lugar.
+El mejor acceso para realizar mediciones es desde la orilla derecha cuando el nivel del río es bajo; sin embargo, su posición exacta puede variar estacionalmente con el desplazamiento de los depósitos, mientras que algunas medidas se toman mejor desde el puente. Las subidas y bajadas del nivel del río también pueden influir en la ubicación exacta del lugar.
 
 El acceso y el aparcamiento se realizan desde el pequeño pueblito de Ñahuinpuquio (donde se cobra una entrada de s/1 por persona para visitar la cascada). El sitio se encuentra a unos 750 metros por el sendero que lleva a la cascada.
 
 (Los comentarios sobre la geología, vegetación y fauna se añadirán tras futuras visitas de campo).
 
-NB. En marzo de 2023, la intención original era visitar un sitio río abajo donde el río es puenteado ya sea por la nueva o antigua carretera de Huanta a Luricocha, pero en ambos lugares había poca agua en el río ese día. Estos lugares serán revisados nuevamente como sitios potenciales en futuras visitas.
+NB. En marzo y junio de 2023, la intención original era visitar un sitio río abajo donde el río es puenteado ya sea por la nueva o antigua carretera de Huanta a Luricocha, pero en ambos lugares había poca agua en el río ese día. Estos lugares serán revisados nuevamente como sitios potenciales en futuras visitas.
 
 
 ### Data analysis / Análisis de datos
